--- a/applications/samples/Sample/www/index.html
+++ b/applications/samples/Sample/www/index.html
@@ -1,5 +1,5 @@
 <!-- 
-Copyright © 2015, 2019 Acoustic, L.P. All rights reserved.
+Copyright (C) 2024 Acoustic, L.P. All rights reserved.
 
 NOTICE: This file contains material that is confidential and proprietary to 
 Acoustic, L.P. and/or other developers. No license is granted under any intellectual or 
@@ -48,7 +48,7 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
             <!-- <a data-transition="slide" id='testButton' href="/cdvtests/index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">View test page</a> -->
         </div>
 
-        <div class='copyright'>Copyright (c) 2023 Acoustic. All rights reserved.</div>
+        <div class='copyright'>Copyright (C) 2024 Acoustic. All rights reserved.</div>
 
         <div data-role="header">
             <h1>Sample App</h1>
@@ -257,7 +257,14 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
 
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key= YOUR GOOGLE MAPS API KEY HERE"></script>
+    <script>
+      (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
+        key: "AIzaSyCWwrfQJ9uUoTuUcTP6rk-urbylI2_aKUw",
+        v: "weekly",
+        // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
+        // Add other bootstrap parameters as needed, using camel case.
+      });
+    </script>
 </body>
 
 </html>
